--- a/theme/styles/components/_dark.css
+++ b/theme/styles/components/_dark.css
@@ -1,20 +1,3 @@
-/* Auto dark mode */
-@media (prefers-color-scheme: dark) {
-  :root:not(.light) {
-    --color-accent-0: #22272e;
-    --color-accent-1: #2d333b;
-    --color-accent-2: #373e47;
-    --color-accent-3: #444c56;
-    --color-accent-4: #545d68;
-    --color-accent-5: #636e7b;
-    --color-accent-6: #768390;
-    --color-accent-7: #909dab;
-    --color-accent-8: #adbac7;
-    --color-accent-9: #cdd9e5;
-    --color-background-transparent: rgba(31, 31, 31, 0);
-  }
-}
-/* Force dark mode */
 :root.dark {
   --color-accent-0: #22272e;
   --color-accent-1: #2d333b;
