--- a/theme/styles/components/_highlight.css
+++ b/theme/styles/components/_highlight.css
@@ -85,75 +85,6 @@ pre[class*="language-"] {
 }
 
 /* One-Dark */
-@media (prefers-color-scheme: dark) {
-  :root:not(.light) code[class*="language-"],
-  :root:not(.light) pre[class*="language-"] {
-    color: #abb2bf; /* base05 */
-  }
-  /* Code blocks */
-  :root:not(.light) :not(pre) > code[class*="language-"],
-  :root:not(.light) pre[class*="language-"] {
-    background: transparent; /* base00 */
-  }
-  /* Inline code */
-  :root:not(.light) .token.comment,
-  :root:not(.light) .token.prolog,
-  :root:not(.light) .token.cdata {
-    color: #545862; /* base03 */
-  }
-  :root:not(.light) .token.entity,
-  :root:not(.light) .language-css .token.string,
-  :root:not(.light) .style .token.string {
-    color: #565c64; /* base04 */
-    background: #353b45; /* base01 */
-  }
-  :root:not(.light) .token.punctuation {
-    color: #abb2bf; /* base05 */
-  }
-  :root:not(.light) .token.variable,
-  :root:not(.light) .token.tag,
-  :root:not(.light) .token.operator,
-  :root:not(.light) .token.deleted {
-    color: #e06c75; /* base08 */
-  }
-  :root:not(.light) .token.property,
-  :root:not(.light) .token.number,
-  :root:not(.light) .token.boolean,
-  :root:not(.light) .token.constant,
-  :root:not(.light) .token.url {
-    color: #d19a66; /* base09 */
-  }
-  :root:not(.light) .token.class-name,
-  :root:not(.light) .token.bold {
-    color: #e5c07b; /* base0A */
-  }
-  :root:not(.light) .token.string,
-  :root:not(.light) .token.symbol,
-  :root:not(.light) .token.attr-value,
-  :root:not(.light) .token.inserted,
-  :root:not(.light) .token.atrule {
-    color:#98c379; /* base0B */
-  }
-  :root:not(.light) .token.regex,
-  :root:not(.light) .token.important {
-    color: #56b6c2; /* base0C */
-  }
-  :root:not(.light) .token.function,
-  :root:not(.light) .token.attr-name {
-    color: #61afef; /* base0D */
-  }
-  :root:not(.light) .token.keyword,
-  :root:not(.light) .token.selector,
-  :root:not(.light) .token.italic,
-  :root:not(.light) .token.char,
-  :root:not(.light) .token.builtin {
-    color: #c678dd; /* base0E */
-  }
-  :root:not(.light) .token.doctype {
-    color: #be5046; /* base0F */
-  }
-}
-/* Force dark mode */
 :root.dark code[class*="language-"],
 :root.dark pre[class*="language-"] {
   color: #abb2bf; /* base05 */
